feat: add swagger docs to index method
