# storage/api-docs/api-docs.json
@@ -323,6 +323,27 @@
             }
         },
         "/api/v1/patients": {
+            "get": {
+                "tags": [
+                    "Patients"
+                ],
+                "summary": "List all patients",
+                "description": "Retrieves a paginated list of all patients",
+                "operationId": "6747f925788f494507252b8889e09dd1",
+                "responses": {
+                    "200": {
+                        "description": "Success"
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            },
             "post": {
                 "tags": [
                     "Patients"
@@ -408,7 +429,10 @@
                     },
                     "nursing_assessments": {
                         "description": "Avaliações de enfermagem",
-                        "type": "string",
+                        "type": "array",
+                        "items": {
+                            "type": "mixed"
+                        },
                         "example": [
                             "Paciente estável"
                         ]
